Fix context token calculation, add tests
cache_creation_input_tokens was being double-counted since it's
already included in input_tokens. Only cache_read_input_tokens
should be added separately.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "prepare": "git config core.hooksPath .githooks 2>/dev/null || true && npm run build",
     "dev": "tsc --watch",
-    "test": "echo 'TODO: add tests'",
+    "test": "tsc && node --test dist/*.test.js",
     "test:stdin": "echo '{\"model\":{\"display_name\":\"Opus 4.5\"},\"context_window\":{\"current_usage\":{\"input_tokens\":45000,\"output_tokens\":5000,\"cache_creation_input_tokens\":1000,\"cache_read_input_tokens\":2000},\"context_window_size\":200000},\"cwd\":\"/tmp\"}' | node dist/index.js"
   },
   "keywords": ["claude-code", "statusline", "hud"],
