--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cc-status",
-  "version": "0.6.0",
+  "version": "0.6.1",
   "description": "Custom statusline for Claude Code with context tracking and git info",
   "type": "module",
   "main": "dist/index.js",
@@ -11,7 +11,11 @@
     "test": "tsc && node --test dist/*.test.js",
     "test:stdin": "echo '{\"model\":{\"display_name\":\"Opus 4.5\"},\"context_window\":{\"current_usage\":{\"input_tokens\":45000,\"output_tokens\":5000,\"cache_creation_input_tokens\":1000,\"cache_read_input_tokens\":2000},\"context_window_size\":200000},\"cwd\":\"/tmp\"}' | node dist/index.js"
   },
-  "keywords": ["claude-code", "statusline", "hud"],
+  "keywords": [
+    "claude-code",
+    "statusline",
+    "hud"
+  ],
   "author": "Antonio Fernandez-Guerra",
   "license": "MIT",
   "engines": {
